# coctus

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml  sol.py
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  release.yml  rust.yml
config/: ruby.toml
config/stub_templates/c/: forward_declaration.c.jinja  init_read_declarations.c.jinja  loop.c.jinja  loopline.c.jinja  main.c.jinja  main_wrapper.c.jinja  read_many.c.jinja  read_one.c.jinja  stub_config.toml  write.c.jinja  write_join.c.jinja
config/stub_templates/clojure/: loop.clj.jinja  loopline.clj.jinja  main.clj.jinja  read_batch.clj.jinja  read_many.clj.jinja  read_one.clj.jinja  stub_config.toml  write.clj.jinja  write_join.clj.jinja
config/stub_templates/cpp/: loopline.cpp.jinja  main.cpp.jinja  read_many.cpp.jinja  read_one.cpp.jinja  stub_config.toml  write.cpp.jinja  write_join.cpp.jinja
config/stub_templates/pascal/: forward_declarations.pas.jinja  loop.pas.jinja  loopline.pp.jinja  main.pas.jinja  main.pp.jinja  main_wrapper.pas.jinja  main_wrapper.pp.jinja  read_many.pas.jinja  read_one.pas.jinja  stub_config.toml  write.pp.jinja  write_join.pas.jinja
config/stub_templates/python/: loop.py.jinja  loopline.py.jinja  main.py.jinja  read_many.py.jinja  read_one.py.jinja  stub_config.toml  write.py.jinja  write_join.py.jinja
config/stub_templates/ruby/: loop.rb  loop.rb.jinja  loopline.rb.jinja  main.rb  main.rb.jinja  read.rb  read.rb.jinja  read_many.rb.jinja  read_one.rb.jinja  statement.rb.jinja  stub_config.toml  write.rb  write.rb.jinja  write_join.rb.jinja
config/stub_templates/rust/: loop.rs.jinja  loopline.rs.jinja  main.rs.jinja  read_many.rs.jinja  read_one.rs.jinja  statement.rs.jinja  stub_config.toml  write.rs.jinja  write_join.rs.jinja
fixtures/puzzles/: stub_and_solution_tester.json  stub_tester.json
scripts/: teststub.py
src/: app.rs  clash.rs  formatter.rs  internal.rs  lib.rs  main.rs  outputstyle.rs  programming_language.rs  solution.rs  stub.rs  test_helper.rs  tester.rs
src/clash/: public_handle.rs  test_case.rs  testcase.rs
src/internal/: formatter.rs  lines_with_endings.rs  outputstyle.rs
src/solution/: suite_run.rs  test_result.rs  test_run.rs
src/stub/: language.rs  parser.rs  preprocessor.rs  renderer.rs  stub_config.rs  types.rs
tests/: render_py_tests.rs
(+9 files in other folders)
