[package]
name = "clash"
version = "0.1.0"
edition = "2021"

[lib]
name = "clashlib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
directories = "5.0"
anyhow = "1.0.75"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
shlex = "1.2.0"
regex = "1"
reqwest = { version = "0.11.22", features = ["blocking"] }
clap_complete = "4.4.3"
ansi_term = "0.12"
lazy_static = "1.4.0"
indoc = "2.0.4"
dissimilar = "1.0.7"
itertools = "0.11.0"
wait-timeout = "0.2.0"
toml = "0.8.6"
tera = "1.19.1"
