[package]
name = "coctus"
version = "0.2.0"
edition = "2021"

[lib]
name = "clashlib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
directories = "5.0"
anyhow = "1.0.82"
rand = "0.8.5"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
shlex = "1.3.0"
regex = "1"
reqwest = { version = "0.12.4", features = ["blocking"] }
clap_complete = "4.5.2"
ansi_term = "0.12"
lazy_static = "1.4.0"
indoc = "2.0.5"
dissimilar = "1.0.8"
itertools = "0.12.1"
wait-timeout = "0.2.0"
toml = "0.8.12"
tera = "1.19.1"
include_dir = { version = "0.7.3", features = ["glob"]}
